# ansible_role_doc

./: .gitignore  .markdownlint.json  .markdownlintignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTEXT_SUMMARY_2026-03-13.md  LICENSE  MODERNIZATION_CHANGELOG.md  Makefile.pod  README.json  README.md  README2.md  TODO.md  commit_msg.txt  llms.txt  mypy_output.txt  pyproject.toml  pytest_out.txt  requirements-dev.txt  run_greps.sh  scan.md  setup.cfg  tox.ini
.github/: branch-protection.main.json  dependabot.yml
.github/agents/: README.md  flow-monitor.agent.md
.github/skills/: README.md
.github/skills/architecture-blueprint-generator/: .skill-meta.json  SKILL.md
.github/skills/context-engineering/: CONTRIBUTING.md
.github/skills/git-flow-branch-creator/: SKILL.md
.github/skills/suggest-awesome-github-copilot-instructions/: .skill-meta.json  SKILL.md
.github/workflows/: ansible-role-doc.yml  blank.yml  default.yml  dependency-hygiene.yml  lint.yml  prism.yml
.tmp_exported_skill/gilfoyle-review-loop-shareable/: HUMAN-INSTRUCTIONS.md  SKILL.md
.tmp_exported_skill/gilfoyle-review-loop-shareable/references/: capability-bootstrap.md  codebase-customization-prompt.md  common-traps.md  gate-commands.md  host-feature-mapping.md  iteration-cadence.md  learning-ledger.md  light-cycle.md  parallel-execution.md  plan-template.yaml  review-checklist.md  (+4 more)
demos/output/: collection_demo.json  role_demo.json  role_demo_README.md  role_demo_detailed.md
docs/: CHANGELOG.md  PRD.yaml  PRISM_FRIENDLY_ROLE_GUIDE.md  README.md  TODO.md  WORK_SCHEDULE_2026.md  _config.yml  article.htm  changelog.md  ci-starter-workflows.md  index.html  pipeline-diagram.md  podman-postgres-local.md  prism-friendly-role-authoring.md  user-guide.md
docs/dev_docs/: README.md  api-reference.md  architecture.md  completed-plans.md  dependency-hygiene.md  error-boundary-audit-20260424.md  error-boundary-audit-baseline.json  evolution-guides.md  modernization-plan-v2.md  modernization-plan.md  modernization-v2-completion-signoff.md  package-capabilities.md  provenance-categories.md  review-followup-implementation-plan-20260403.md  roadmap.md  scan-performance-baseline-20260404.md  source-evaluation-matrix.md  unresolved-provenance-batch15.md
docs/plan/: INDEX.md  g34-completion-audit.md  mutl3y-workflow-authoring.md  mutl3y-workflow-improvements-20260502.md
old_docs/: archived_modernization-plan.md
scripts/: archive_completed_mutl3y_plans.py  archive_completed_review_plans.py  audit_error_boundaries.py  check_barrier_status.py  cleanup_mutl3y_completed_plan_artifacts.py  cli_demo_matrix.py  profile_role_scan.py  record_execution_trace.py  rollup_model_usage.py  validate_mutl3y_plan_contract.py
src/ansible_role_doc/: api.py  cli.py  pattern_config.py  scanner.py
src/ansible_role_doc.egg-info/: PKG-INFO  SOURCES.txt
src/prism/: __init__.py  _jinja_analyzer.py  _task_parser.py  _variable_extractor.py  api.py  cli.py  cli_collection.py  cli_commands.py  cli_completion.py  cli_presenters.py  cli_repo.py  cli_role.py  collection_plugins.py  doc_insights.py  errors.py  init.py  output.py  path_safety.py  pattern_config.py  progress.py  readme_config.py  repo_services.py  requirements.py  runbook.py  scanner.py  scanner_report.py  style_guide.py
(+1632 files in other folders)
