[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "prism-ansible"
version = "0.1.0"
description = "Scan an Ansible role for Jinja2 default() usages and generate README documentation."
authors = [
  { name="mutl3y" }
]
readme = "README.md"
requires-python = ">=3.14"
license = { text = "Apache-2.0" }
dependencies = [
  "PyYAML>=5.4",
  "Jinja2>=2.11"
]
[project.scripts]
prism = "prism.cli:main"

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "tox",
  "mypy",
  "ruff==0.15.6",
  "black==25.1.0",
  "pre-commit",
  "markdown",
]

[tool.ruff]
target-version = "py314"

[tool.mypy]
ignore_missing_imports = true
disable_error_code = ["import-untyped"]
follow_imports = "silent"
files = [
  "src/prism/scanner_submodules/scan_context.py",
  "src/prism/scanner_submodules/scan_request.py",
  "src/prism/scanner_submodules/scan_output_emission.py",
  "src/prism/scanner_submodules/scan_output_primary.py",
  "src/prism/scanner_submodules/scan_metrics.py",
  "src/prism/scanner_submodules/scan_discovery.py",
  "src/prism/scanner_submodules/scanner_report.py",
  "src/prism/scanner_submodules/output.py",
  "src/prism/scanner_submodules/runbook.py",
  "src/prism/scanner_submodules/readme_config.py",
  "src/prism/scanner_submodules/style_vars.py",
  "src/prism/scanner_submodules/requirements.py",
  "src/prism/scanner_submodules/doc_insights.py",
  "src/prism/scanner_submodules/style_guide.py",
  "src/prism/scanner_submodules/task_parser.py",
  "src/prism/scanner_submodules/variable_extractor.py",
  "src/prism/scanner.py",
  "src/prism/api.py",
  "src/prism/cli.py",
  "src/prism/pattern_config.py",
  "src/prism/collection_plugins.py",
  "src/prism/feedback.py",
  "src/prism/init.py",
  "src/prism/_jinja_analyzer.py",
  "src/prism/repo_services.py",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
prism = ["templates/*.j2", "templates/*.md", "data/*.yml"]
